--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="Poemas de Cecy Tapia - Poemas Zen e Imágenes"
       content="Web site created using create-react-app"
     />
-
+    <meta name="author" content="Cecy Tapia" />
+    <meta
+      name="keywords"
+      content="poemas breves, poemas zen, zen, haiku, poesia argentina, poemas, mis poemas, poemas nada más, poesia, lectura, japones, arte, cultura, cecilia tapia, reflexion"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- BOOSTRAP STYLES -->
@@ -32,7 +36,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>    
-    <script async src="//www.instagram.com/embed.js"></script>
+    <div id="root"></div>
+    <!-- <script async src="//www.instagram.com/embed.js"></script> -->
   </body>
 </html>
