--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,7 @@
+<!-- Created by -->
+<!-- JULIAN BLEKER -->
+<!-- GitHub: artebleker -->
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -31,7 +35,6 @@
       href="https://fonts.googleapis.com/css2?family=Courgette&family=Open+Sans:wght@300&family=Poppins:wght@300&family=Satisfy&display=swap"
       rel="stylesheet"
     />
-
     <title>Poemas Nada Más</title>
   </head>
   <body>
